==> RobotGrrl/OtterForceOne/Firmware/OFO_Hull/src/consoleIo.cpp <==
#include <Arduino.h>

// Console IO is a wrapper between the actual in and output and the console code
// In an embedded system, this might interface to a UART driver.

#include "consoleIo.h"
#include <stdio.h>

eConsoleError ConsoleIoInit(void)
{
	Serial.begin(9600);
	return CONSOLE_SUCCESS;
}

// This is modified for the Wokwi RPi Pico simulator. It works fine 
// but that's partially because the serial terminal sends all of the 
// characters at a time without losing any of them. What if this function
// wasn't called fast enough?
eConsoleError ConsoleIoReceive(uint8_t *buffer, const uint32_t bufferLength, uint32_t *readLength)
{
	uint32_t i = 0;
	char ch;

	while (Serial.available() > 0) 
	{
		ch = Serial.read();
		Serial.print(ch); // echo
		buffer[i] = (uint8_t) ch;
		i++;
	}

	*readLength = i;
	return CONSOLE_SUCCESS;
}

eConsoleError ConsoleIoSendString(const char *buffer)
{
	Serial.print(buffer);
	return CONSOLE_SUCCESS;
}
